<resources>
    <string name="app_name">Stormy</string>
    <string name="action_settings">Settings</string>
    <string name="alert_dialog_title">Forecast error</string>
    <string name="alert_dialog_message">There was an error. Please try again.</string>
    <string name="alert_dialog_ok_button_text">OK</string>
    <string name="title_activity_daily_forecast">DailyForecastActivity</string>
    <string name="no_daily_forecast">No data to display</string>
    <string name="service_not_available">The Geocoder service is not available.</string>
    <string name="invalid_lat_long_used">The latitude and longitude provided are not valid.</string>
    <string name="no_address_found">No address found.</string>
    <string name="address_found">Address found.</string>
    <string name="hourly_button_text">HOURLY</string>
    <string name="weekly_button_text">7 DAY</string>
    <string name="rain_snow_text">RAIN/SNOW</string>
    <string name="humidity_text">HUMIDITY</string>
    <string name="loading_weather_text">Loading weather...</string>
    <string name="getting_location_text">Getting location...</string>
    <string name="network_unavailable">Network is unavailable.</string>
    <string name="api_error_message">"Forecast API error: "</string>
    <string name="language_not_supported_message">We are sorry but your language is not supported at the moment.</string>
    <string name="today_label">Today</string>
    <string name="user_chose_no_location">Without location it is not possible to load weather conditions</string>
</resources>
